# alltalk-tts-mcp

./: .gitignore  CONFIGURATION.md  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  test_alltalk_direct.py  test_audio.py  test_exact_curl.py  test_mcp_env.py  test_mcp_stdio.py  test_no_rvc.py  test_playsound.py
.gitnexus/: meta.json
