[project]
name = "alltalk-mcp-server"
version = "0.1.0"
description = "MCP server for AllTalk TTS with full SillyTavern functionality"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.4.1",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
    "aiofiles>=24.1.0",
]